--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1281,6 +1281,10 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
   (use-package flx                        ; Optional dependency
     :ensure t
     :defer t)
+
+  (use-package wgrep                      ; Optional dependency
+    :ensure t
+    :defer t)
 #+END_SRC
 
 *** counsel - Ivy powered commands
@@ -1520,15 +1524,6 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
     :config
     (setq compilation-scroll-output 'first-error)
     (add-hook 'compilation-filter-hook #'koek-cmpl/style-output))
-#+END_SRC
-
-** wgrep - Edit files through grep output
-[[https://github.com/mhayashi1120/Emacs-wgrep][wgrep (GitHub)]]
-
-#+BEGIN_SRC emacs-lisp
-  (use-package wgrep
-    :ensure t
-    :defer t)
 #+END_SRC
 
 ** mu4e - E-mail client
@@ -2416,6 +2411,10 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
             (concat "\\hypersetup{\n "
                     (string-join (append options '("hidelinks")) ",\n ")
                     "\n}\n"))))
+
+  (use-package htmlize                    ; Optional dependency
+    :ensure t
+    :defer t)
 #+END_SRC
 
 *** org-caldav - Sync calendars
@@ -2426,15 +2425,6 @@ For agendas, see [[file:90-personal.org::*Agendas][Agendas]].
     :ensure t
     :bind
     ("C-c o s" . org-caldav-sync))
-#+END_SRC
-
-*** htmlize - Text to HTML converter
-[[https://github.com/hniksic/emacs-htmlize][htmlize (GitHub)]]
-
-#+BEGIN_SRC emacs-lisp
-  (use-package htmlize
-    :ensure t
-    :defer t)
 #+END_SRC
 
 ** Python
